ensure attribution doesn't overlap map controls, display means in col style on mobile

--- a/frontend/src/map/Map.css
+++ b/frontend/src/map/Map.css
@@ -2,6 +2,10 @@
     height: 100%;
 }
 
+.leaflet-control-zoom {
+    margin-bottom: 18px !important;
+}
+
 .cluster-icon {
     width: 120px !important;
     height: auto !important;
